WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129766
Web Inspector: Prevent possible deadlock in view indication
https://bugs.webkit.org/show_bug.cgi?id=129766
Summary
Web Inspector: Prevent possible deadlock in view indication
Joseph Pecoraro
Reported
2014-03-05 17:59:14 PST
We need the lock to get the Debuggable, but if we have the debuggable, we can use it outside of the lock.
Attachments
[PATCH] Proposed Fix
(1.81 KB, patch)
2014-03-05 18:00 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2014-03-05 18:00:59 PST
Created
attachment 225932
[details]
[PATCH] Proposed Fix
Geoffrey Garen
Comment 2
2014-03-05 18:52:48 PST
Comment on
attachment 225932
[details]
[PATCH] Proposed Fix r=me
WebKit Commit Bot
Comment 3
2014-03-05 19:23:21 PST
Comment on
attachment 225932
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 225932 Committed
r165165
: <
http://trac.webkit.org/changeset/165165
>
WebKit Commit Bot
Comment 4
2014-03-05 19:23:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug