Web Inspector: Prevent possible deadlock in view indication https://bugs.webkit.org/show_bug.cgi?id=129766

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-03-05
Reviewed by Geoffrey Garen.

* inspector/remote/RemoteInspector.mm:
(Inspector::RemoteInspector::receivedIndicateMessage):

Canonical link: https://commits.webkit.org/147812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165165 268f45cc-cd09-0410-ab3c-d52691b4dbfc